--- a/css/styles.css
+++ b/css/styles.css
@@ -726,6 +726,7 @@ margin-bottom: 20px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     position: absolute;
+    padding: 40px;
     top: 50%;
     left: 50%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -757,3 +758,37 @@ margin-bottom: 20px;
     visibility: hidden;
 }
 
+.modal-title {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 30px;
+}
+
+.modal-input {
+    width: 448px;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-bottom: 28px;
+    padding-left: 42px;
+}
+
+.modal-label {
+    font-size: 12px;
+    line-height: 1.15;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+.modal-text {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding: 12px;
+    margin-bottom: 20px;
+    resize: none;
+}
