--- a/css/styles.css
+++ b/css/styles.css
@@ -585,71 +585,68 @@ margin-bottom: 20px;
     background: #2196F3;
 }
 
-.footer-input {
-    position: relative;
-    width: 358px;
-    height: 50px;
-    border-radius: 4px;
-    padding-left: 16px;
-    background: transparent;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+.subscription-box {
+    display: flex;
+    margin-top: 20px;
 }
 
-.footer-input:focus {
-    border: 1px solid #2196F3;
+.subscription-form {
+    margin-left: 93px;
 }
 
-.footer-connection{
+.thumb-text {
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #FFFFFF;
 }
 
-.footer-label{
-    font-size: 12px;
-    line-height: 1.15;
-    letter-spacing: 0.01em;
-    color: #757575;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-}
-
-.footer-label:focus {
-    border: 1px solid #2196F3;
-}
-
-.footer-submit-btn {
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translate(-50%);
-}
-
-.icon-send {
-    position: absolute;
-    right: 28px;
-}
-
-.footer-submit {
-    position: absolute;
-    width: 200px;
+.subscription-input {
+    min-width: 358px;
     height: 50px;
-    font-family: inherit;
-    font-weight: 700;
+    box-sizing: border-box;
+    outline: none;
+    margin-right: 12px;
+    padding-left: 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+.subscription-input::placeholder {
+    font-weight: 400;
     font-size: 16px;
-    line-height: 1.88px;
-    padding-left: 29px;
+    line-height: 1.25;
     display: flex;
     align-items: center;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: #FFFFFF;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-btn {
+    font-family: inherit;
+    padding: 10px 28px 10px 29px;
     background: #2196F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    outline: none;
+    border: none;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+}
+
+.submit-icon {
+    margin-left: 10px;
 }
 
 /* --------------------PORTFOLIO-PAGE---------------------- */
