--- a/css/styles.css
+++ b/css/styles.css
@@ -616,6 +616,10 @@ margin-bottom: 20px;
     background-color: transparent;
 }
 
+.subscription-input:focus {
+    border: 1px solid #2196F3
+}
+
 .subscription-input::placeholder {
     font-weight: 400;
     font-size: 16px;
