--- a/css/styles.css
+++ b/css/styles.css
@@ -720,7 +720,7 @@ margin-bottom: 20px;
     margin-bottom: 0px;
 }
 
-.portfolio-list:hover .portfolio-top-text {
+.portfolio-link:hover .portfolio-top-text {
     transform: translateY(0%);
 }
 
@@ -820,7 +820,13 @@ margin-bottom: 20px;
     position: absolute;
     top: 50%;
     left: 50%;
+    color: #000000;
     transform: translate(-50%, -50%);
+}
+
+.modal-close-btn:hover {
+    border: 1px solid #2196F3;
+    fill: #2196F3;
 }
 
 .is-hidden {
@@ -836,7 +842,7 @@ margin-bottom: 20px;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
 }
 
 .madal-field {
@@ -893,7 +899,7 @@ margin-bottom: 20px;
     border: 1px solid rgba(117, 117, 117, 0.5);
     border-radius: 4px;
     padding: 16px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     resize: none;
     outline: none;
 }
@@ -926,6 +932,10 @@ margin-bottom: 20px;
     background-image: url(../images/icon-checked.svg);
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.input-check:focus + .check-text {
+    background-color: #2196F3;
 }
 
 .policy-link {
