--- a/css/styles.css
+++ b/css/styles.css
@@ -824,7 +824,8 @@ margin-bottom: 20px;
     transform: translate(-50%, -50%);
 }
 
-.modal-close-btn:hover {
+.modal-close-btn:hover, 
+.modal-close-btn:focus {
     border: 1px solid #2196F3;
     fill: #2196F3;
 }
@@ -926,6 +927,7 @@ margin-bottom: 20px;
     margin-right: 7px;
 }
 
+
 .input-check:checked + .check-text::before {
     background-color: #2196F3;
     border: none;
@@ -934,8 +936,8 @@ margin-bottom: 20px;
     background-position: center;
 }
 
-.input-check:focus + .check-text {
-    background-color: #2196F3;
+.input-check:hover + .check-text {
+    border-color: #2196F3;
 }
 
 .policy-link {
